sort.pancake.lessons.sort.pancake.CohenPancake.scala.error
CohenPancake:8: error: debug is already defined as value debug
	val debug=0; // 0: silence; 1: all details
            ^CohenPancake:32: error: ambiguous reference to overloaded definition,
both method showStack in class CohenPancake of type (nl: Boolean)Unit
and  method showStack in class CohenPancake of type (nl: Boolean)Unit
match argument types (Boolean)
			showStack(false);
                        ^CohenPancake:64: error: ambiguous reference to overloaded definition,
both method getRankOf in class CohenPancake of type (size: Integer)Integer
and  method getRankOf in class CohenPancake of type (size: Integer)Integer
match argument types (Int)
					val pPlus1 = getRankOf(maxupside+1);
                                                     ^CohenPancake:68: error: ambiguous reference to overloaded definition,
both method showStack in class CohenPancake of type (nl: Boolean)Unit
and  method showStack in class CohenPancake of type (nl: Boolean)Unit
match argument types (Boolean)
						flip(pPlus1+1);showStack(true);
                                                               ^CohenPancake:90: error: ambiguous reference to overloaded definition,
both method showStack in class CohenPancake of type (nl: Boolean)Unit
and  method showStack in class CohenPancake of type (nl: Boolean)Unit
match argument types (Boolean)
						showStack(true);
                                                ^CohenPancake:94: error: ambiguous reference to overloaded definition,
both method getRankOf in class CohenPancake of type (size: Integer)Integer
and  method getRankOf in class CohenPancake of type (size: Integer)Integer
match argument types (Int)
					var pPlus1 = getRankOf(getStackSize()+1)
                                                     ^CohenPancake:99: error: ambiguous reference to overloaded definition,
both method getRankOf in class CohenPancake of type (size: Integer)Integer
and  method getRankOf in class CohenPancake of type (size: Integer)Integer
match argument types (Int) and expected result type Int
						p = getRankOf(radius);
                                                    ^CohenPancake:9: error: method showStack is defined twice
  conflicting symbols both originated in file 'plm.runtime2.CohenPancake'
	def showStack(nl:Boolean) {
            ^CohenPancake:2: error: method getRankOf is defined twice
  conflicting symbols both originated in file 'plm.runtime2.CohenPancake'
	def getRankOf(size: Integer):Integer = {
            ^